# BurgerStack

./: .gitignore  .gitmodules  README.md  pixi.toml
burger_bringup/: CMakeLists.txt  package.xml
burger_bringup/behavior_trees/: navigate_to_pose_minimal.xml
burger_bringup/launch/: bringup.launch.py  localization_amcl.launch.py  nav2.launch.py  plan_demo.launch.py  sim.launch.py  slam.launch.py
burger_bringup/maps/: map.pgm  map.yaml  map_gt.yaml
burger_bringup/models/turtlebot3_burger_depth/: model.config  model.sdf
burger_bringup/params/: exploration.yaml  nav2.yaml  slam.yaml
burger_bringup/rviz/: planner.rviz
burger_bringup/urdf/: turtlebot3_burger_depth.urdf
burger_worlds/: CMakeLists.txt  README.md  package.xml
burger_worlds/worlds/office/: service.world
burger_worlds/worlds/small_house/: small_house.world
rrt_core/: CMakeLists.txt  README.md  package.xml
rrt_core/include/rrt_core/: collision_checker.hpp  grid_collision_checker.hpp  rrt.hpp  spatial_hash.hpp  types.hpp  utils.hpp
rrt_core/src/: grid_collision_checker.cpp  rrt.cpp  spatial_hash.cpp
rrt_planner/: CMakeLists.txt  README.md  package.xml  plugins.xml
rrt_planner/include/rrt_planner/: costmap_collision_checker.hpp  rrt_global_planner.hpp  rrt_planner_node.hpp  utils.hpp
rrt_planner/src/: main.cpp  rrt_global_planner.cpp  rrt_planner_node.cpp
scripts/: pixi_activate.sh
semantic_nav/: README.md
semantic_nav/semantic_mapping/: package.xml  setup.cfg  setup.py
semantic_nav/semantic_mapping/semantic_mapping/: clip_embedder.py  conversions.py  enrichment.py  map_finalizer_node.py  map_server_node.py  mapping_node.py  ollama_describer.py
semantic_nav/semantic_mapping/test/: test_clip_embedder.py  test_conversions.py  test_enrichment.py  test_ollama_describer.py
semantic_nav/semantic_nav_bringup/: CMakeLists.txt  README.md  package.xml
semantic_nav/semantic_nav_bringup/launch/: save_maps.launch.py  semantic_mapping.launch.py  semantic_navigation.launch.py
semantic_nav/semantic_nav_bringup/params/: semantic_nav.yaml  semantic_nav_real.yaml
semantic_nav/semantic_nav_bringup/rviz/: semantic_nav.rviz
semantic_nav/semantic_nav_msgs/: CMakeLists.txt  package.xml
semantic_nav/semantic_nav_msgs/action/: ExecuteTask.action
semantic_nav/semantic_nav_msgs/msg/: Detection.msg  DetectionArray.msg  SemanticObject.msg  SemanticObjectArray.msg
semantic_nav/semantic_nav_msgs/srv/: BuildSemanticMap.srv  QuerySemanticMap.srv
semantic_nav/semantic_perception/: package.xml  setup.cfg  setup.py
semantic_nav/semantic_perception/semantic_perception/: __init__.py  deprojection.py  detector.py  openvocab_detector.py  perception_node.py
semantic_nav/semantic_perception/test/: test_deprojection.py  test_detector.py  test_openvocab_detector.py
semantic_nav/semantic_reasoning/: package.xml  setup.cfg  setup.py
semantic_nav/semantic_reasoning/semantic_reasoning/: agent.py  execute_task_node.py  geometry.py  mcp_server.py  ollama_backend.py  robot_tools.py  tools.py
semantic_nav/semantic_reasoning/test/: helpers.py  test_agent.py  test_geometry.py  test_mcp_server_import.py  test_ollama_backend.py  test_tools.py
semantic_nav/semantic_store/: package.xml  setup.cfg  setup.py
semantic_nav/semantic_store/semantic_store/: __init__.py  association.py  regions.py  retrieval.py  schema.py  store.py
semantic_nav/semantic_store/test/: test_association.py  test_persistence.py  test_regions.py  test_retrieval.py
