<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>burger_bringup</name>
  <version>0.1.0</version>
  <description>
    Launch files, parameters, RViz configs and maps that compose the TurtleBot3
    autonomy stack: Gazebo simulation, SLAM, frontier exploration, and the RRT
    planner (standalone and as a Nav2 plugin).
  </description>
  <maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rrt_planner</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>frontier_exploration_ros2</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
  