<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>burger_worlds</name>
  <version>0.1.0</version>
  <description>
    Vendored Gazebo Classic simulation worlds for the TurtleBot3 Burger stack.
    Currently ships the AWS RoboMaker / OSRF ServiceSim "office" world
    (worlds/office/service.world) plus its models, media and a reference map.
    Loaded via burger_bringup's sim.launch.py with world:=office.
  </description>
  <maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
