<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>burger_worlds</name>
  <version>0.1.0</version>
  <description>
    Vendored Gazebo Classic simulation worlds for the TurtleBot3 Burger stack.
    Ships two AWS RoboMaker worlds plus their models and reference maps:
    "small_house" (worlds/small_house/small_house.world, the default residential world)
    and "office" (worlds/office/service.world, AWS RoboMaker / OSRF ServiceSim).
    Loaded via burger_bringup's sim.launch.py (world:=small_house | office).
  </description>
  <maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
  <!-- Mixed: office assets are Apache-2.0 (OSRF ServiceSim); small_house assets are MIT
       (AWS RoboMaker Small House world). See README "Provenance & license". -->
  <license>Apache-2.0</license>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
