<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrt_core</name>
  <version>0.1.0</version>
  <description>
    Rapidly-exploring Random Tree (RRT / RRT*) path-planning library.
  </description>
  <maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
