<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_mapping</name>
  <version>0.1.0</version>
  <description>
    The ROS shell over semantic_store. Phase 1: consumes the DetectionArray stream
    from semantic_perception, fuses detections into a spatial semantic map, and on
    request runs a batch enrichment pass (VLM description + image embedding + region
    clustering) and persists the map. Phase 2: loads a saved map and serves
    QuerySemanticMap, publishing the map as SemanticObjectArray + RViz markers.
  </description>
  <maintainer email="sarthak@polybee.co">Sarthak Mittal</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>semantic_nav_msgs</exec_depend>
  <exec_depend>semantic_store</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
