<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_reasoning</name>
  <version>0.1.0</version>
  <description>
    Phase-2 agentic reasoning for semantic_nav. A shared tool layer (query the
    semantic map, navigate via Nav2, read the robot pose) is driven by two
    frontends over the same registry: a local ollama tool-calling agent exposed as
    the ExecuteTask action, and (deferred) an MCP server for Claude. The reasoning
    loop and tool layer are pure and mockable; the rclpy node is the thin shell.
  </description>
  <maintainer email="sarthak@polybee.co">Sarthak Mittal</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>semantic_nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
